@@ -1,89 +1,155 @@
 package com.hhk.expensetreackerapi.service.impl;
 
-import java.sql.Date;
-import java.util.List;
-import java.util.Optional;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
-
+import com.hhk.expensetreackerapi.dto.CategoryDTO;
+import com.hhk.expensetreackerapi.dto.ExpenseDTO;
+import com.hhk.expensetreackerapi.entity.CategoryEntity;
 import com.hhk.expensetreackerapi.entity.Expense;
 import com.hhk.expensetreackerapi.exceptions.ResourceNotFoundException;
+import com.hhk.expensetreackerapi.repository.CategoryRepository;
 import com.hhk.expensetreackerapi.repository.ExpenseRepository;
 import com.hhk.expensetreackerapi.service.IExpenseService;
 import com.hhk.expensetreackerapi.service.IUserService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+
+import java.sql.Date;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ExpenseServiceImpl implements IExpenseService {
 
-	@Autowired
-	private ExpenseRepository expenseRepo;
+    private final ExpenseRepository expenseRepo;
 
-	@Autowired
-	private IUserService userService;
+    private final IUserService userService;
 
-	@Override
-	public Expense saveExpenseDetails(Expense expense) {
-		expense.setUser(userService.getLoggedInUser());
-		return expenseRepo.save(expense);
-	}
+    private final CategoryRepository categoryRepo;
 
-	@Override
-	public Page<Expense> getAllExpenses(Pageable page) {
-		return expenseRepo.findByUserId(userService.getLoggedInUser().getId(), page);
-	}
+    @Override
+    public ExpenseDTO saveExpenseDetails(ExpenseDTO expenseDTO) {
+        //check the existence of the category
+        Optional<CategoryEntity> optionalCategory = categoryRepo.findByUserIdAndCategoryId(userService.getLoggedInUser().getId(), expenseDTO.getCategoryId());
+        if (!optionalCategory.isPresent()) {
+            throw new ResourceNotFoundException("Category is not found for the id " + expenseDTO.getCategoryId());
+        }
+        expenseDTO.setExpenseId(UUID.randomUUID().toString());
+        //map to entity
+        Expense newExpense = mapToEntity(expenseDTO);
+        newExpense.setCategory(optionalCategory.get());
+        newExpense.setUser(userService.getLoggedInUser());
+        newExpense = expenseRepo.save(newExpense);
+        //map to dto
+        return mapToDTO(newExpense);
+    }
 
-	@Override
-	public Expense getExpenseById(Long id) {
-		Optional<Expense> expense = expenseRepo.findByUserIdAndId(userService.getLoggedInUser().getId(), id);
-		if (expense.isPresent()) {
-			return expense.get();
-		}
-		throw new ResourceNotFoundException("Expense is not found for the id " + id);
-	}
+    private ExpenseDTO mapToDTO(Expense newExpense) {
+        return ExpenseDTO.builder()
+                .expenseId(newExpense.getExpenseId())
+                .name(newExpense.getName())
+                .description(newExpense.getDescription())
+                .amount(newExpense.getAmount())
+                .date(newExpense.getDate())
+                .createdAt(newExpense.getCreatedAt())
+                .updatedAt(newExpense.getUpdatedAt())
+                .categoryDTO(mapToCategoryDTO(newExpense.getCategory()))
+                .build();
+    }
 
-	@Override
-	public void deleteExpenseById(Long id) {
-		Expense expense = getExpenseById(id);
-		expenseRepo.delete(expense);
+    private CategoryDTO mapToCategoryDTO(CategoryEntity category) {
+        return CategoryDTO.builder()
+                .name(category.getName())
+                .categoryId(category.getCategoryId())
+                .build();
+    }
 
-	}
+    private Expense mapToEntity(ExpenseDTO expenseDTO) {
+        return Expense.builder()
+                .expenseId(expenseDTO.getExpenseId())
+                .name(expenseDTO.getName())
+                .description(expenseDTO.getDescription())
+                .amount(expenseDTO.getAmount())
+                .date(expenseDTO.getDate())
+                .build();
 
-	@Override
-	public Expense updateExpenseDetails(Long id, Expense expense) {
-		Expense existingExpense = getExpenseById(id);
-		existingExpense.setName(expense.getName() != null ? expense.getName() : existingExpense.getName());
-		existingExpense.setDescription(
-				expense.getDescription() != null ? expense.getDescription() : existingExpense.getDescription());
-		existingExpense
-				.setCategory(expense.getCategory() != null ? expense.getCategory() : existingExpense.getCategory());
-		existingExpense.setAmount(expense.getAmount() != null ? expense.getAmount() : existingExpense.getAmount());
-		existingExpense.setDate(expense.getDate() != null ? expense.getDate() : existingExpense.getDate());
-		return expenseRepo.save(existingExpense);
-	}
+    }
 
-	@Override
-	public List<Expense> readByCategory(String category, Pageable page) {
-		return expenseRepo.findByUserIdAndCategory(userService.getLoggedInUser().getId(), category, page).toList();
-	}
+    @Override
+    public List<ExpenseDTO> getAllExpenses(Pageable page) {
+        List<Expense> listOfExpenses = expenseRepo.findByUserId(userService.getLoggedInUser().getId(), page).toList();
+        return listOfExpenses.stream().map(expense -> mapToDTO(expense)).collect(Collectors.toList());
+    }
 
-	@Override
-	public List<Expense> readByName(String keyword, Pageable page) {
-		return expenseRepo.findByUserIdAndNameContaining(userService.getLoggedInUser().getId(), keyword, page).toList();
-	}
+    @Override
+    public ExpenseDTO getExpenseById(String expenseId) {
+        Expense existingExpense = getExpenseEntity(expenseId);
+        return mapToDTO(existingExpense);
+    }
 
-	@Override
-	public List<Expense> readByDate(Date startDate, Date endDate, Pageable page) {
-		if (startDate == null) {
-			startDate = new Date(0);
-		}
-		if (endDate == null) {
-			endDate = new Date(System.currentTimeMillis());
-		}
-		return expenseRepo.findByUserIdAndDateBetween(userService.getLoggedInUser().getId(), startDate, endDate, page)
-				.toList();
-	}
+    private Expense getExpenseEntity(String expenseId) {
+        Optional<Expense> expense = expenseRepo.findByUserIdAndExpenseId(userService.getLoggedInUser().getId(), expenseId);
+        if (!expense.isPresent()) {
+            throw new ResourceNotFoundException("Expense is not found for the id " + expenseId);
+        }
+        return expense.get();
+    }
+
+    @Override
+    public void deleteExpenseById(String expenseId) {
+        Expense expense = getExpenseEntity(expenseId);
+        expenseRepo.delete(expense);
+
+    }
+
+    @Override
+    public ExpenseDTO updateExpenseDetails(String expenseId, ExpenseDTO expenseDTO) {
+        Expense existingExpense = getExpenseEntity(expenseId);
+        if (expenseDTO.getCategoryId() != null) {
+            Optional<CategoryEntity> optionalCategory = categoryRepo.findByUserIdAndCategoryId(userService.getLoggedInUser().getId(), expenseDTO.getCategoryId());
+            if (!optionalCategory.isPresent()) {
+                throw new ResourceNotFoundException("Expense is not found for the id " + expenseDTO.getCategoryId());
+            }
+            existingExpense.setCategory(optionalCategory.get());
+        }
+        existingExpense.setName(expenseDTO.getName() != null ? expenseDTO.getName() : existingExpense.getName());
+        existingExpense.setDescription(
+                expenseDTO.getDescription() != null ? expenseDTO.getDescription() : existingExpense.getDescription());
+        existingExpense.setAmount(expenseDTO.getAmount() != null ? expenseDTO.getAmount() : existingExpense.getAmount());
+        existingExpense.setDate(expenseDTO.getDate() != null ? expenseDTO.getDate() : existingExpense.getDate());
+        existingExpense = expenseRepo.save(existingExpense);
+        return mapToDTO(existingExpense);
+    }
+
+    @Override
+    public List<ExpenseDTO> readByCategory(String category, Pageable page) {
+        Optional<CategoryEntity> optionalCategory = categoryRepo.findByNameAndUserId(category, userService.getLoggedInUser().getId());
+        if (!optionalCategory.isPresent()) {
+            throw new ResourceNotFoundException("Category is not found for the name " + category);
+        }
+        List<Expense> list = expenseRepo.findByUserIdAndCategoryId(userService.getLoggedInUser().getId(), optionalCategory.get().getId(), page).toList();
+        return list.stream().map(expense -> mapToDTO(expense)).collect(Collectors.toList());
+    }
+
+    @Override
+    public List<ExpenseDTO> readByName(String keyword, Pageable page) {
+        List<Expense> list = expenseRepo.findByUserIdAndNameContaining(userService.getLoggedInUser().getId(), keyword, page).toList();
+        return list.stream().map(expense -> mapToDTO(expense)).collect(Collectors.toList());
+    }
+
+    @Override
+    public List<ExpenseDTO> readByDate(Date startDate, Date endDate, Pageable page) {
+        if (startDate == null) {
+            startDate = new Date(0);
+        }
+        if (endDate == null) {
+            endDate = new Date(System.currentTimeMillis());
+        }
+        List<Expense> list = expenseRepo.findByUserIdAndDateBetween(userService.getLoggedInUser().getId(), startDate, endDate, page)
+                .toList();
+        return list.stream().map(expense -> mapToDTO(expense)).collect(Collectors.toList());
+    }
 
 }
